# gemm

./: .gitignore  .lldbinit  CMakeLists.txt
GEMM/: CMakeLists.txt
GEMM/include/GEMM/: gemm.hpp  matrix_view.hpp  micro_kernel.hpp  utils.hpp
GEMM/src/: gemm.cpp  matrix_view.cpp
GEMM/src/micro_kernel/: fp64gemm_simd_8x4.cpp
benchmark/: CMakeLists.txt
scripts/lldb/: print_matrix.py
test/: CMakeLists.txt  test_gemm.cpp  test_matrix_view.cpp  test_micro_kernel.cpp
